refactor: update build and deployment scripts to retrieve ECR and S3 configurations from SSM parameters

--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -28,14 +28,15 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:80
       - ASPNETCORE_ENVIRONMENT=Production
+      - DetailedErrors=true
       - AWS_DEFAULT_REGION=eu-west-1
       - AWS_REGION=eu-west-1
       - DynamoDBRegion=eu-west-1
       - FeatureFlags__MySql=false
       - FeatureFlags__DynamoDB=true
-      - FeatureFlags__UseDynamoDB=false
+      - FeatureFlags__UseDynamoDB=true
       - FeatureFlags__UseS3=true
-      - S3__BucketName=photoboard-uploads-eu-west-1
+      - S3__BucketName=swarmdemo-photo-uploads
       
     networks:
       - swarmapp-network
