refactor: remove build-and-push.sh script and update docker-compose.yml with additional comments

--- a/app/Infra/docker-compose.yml
+++ b/app/Infra/docker-compose.yml
@@ -33,3 +33,5 @@ services:
 
 volumes:
   db_data:
+# This file used for local testing with docker-compose
+# Use docker-compose.swarm.yml for AWS deployment with ECS. See Readme for details.
